--- a/Shopper/app/src/main/res/values/strings.xml
+++ b/Shopper/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_display_store">DisplayStoreActivity</string>
     <string name="title_activity_display_items">DisplayItemsActivity</string>
+    <string name="title_activity_create_shopping">CreateShoppingActivity</string>
 </resources>
